src/stylus/styles.styl
/**
 *   ________________     ________________     ________________     ________________
 *  |\      _____    \   |\    ___________\   |\      _____    \   |\               \\
 *  \ \     \___/\    \  \ \   \__________/   \ \     \___/\    \  \ \     ______    \\
 *   \ \     \__\_\    \  \ \   \____________  \ \     \__\_\   _\  \ \    \____/\    \\
 *    \ \               \  \ \    ___________\  \ \            /_/_  \ \    \   \ \    \\
 *     \ \     ______    \  \ \   \__________/   \ \     ______    \  \ \    \___\_\    \\
 *      \ \    \____/\    \  \ \   \____________  \ \    \____/\    \  \ \               \\
 *       \ \____\   \ \____\  \ \_______________\  \ \____\   \ \____\  \ \_______________\\
 *        \|____/    \|____/   \|_______________/   \|____/    \|____/   \|_______________/
 *
 *                                  M o t i o n      D e s i g n
 *
 *                                 Copyright (c) 2016 AeroXMotion
 */
@import _icons
@import _resets

.Page
  display flex
  justify-content center
  align-items center
  height 100vh
  padding 15px
  background url('../images/background.jpg')
  background-size cover
  color #fff
  font-family 'Poiret One', Arial, Helvetica, sans-serif
  text-rendering optimizeLegibility

  @media only screen and (max-width: 1024px)
    font-size 12px

  @media only screen and (min-width: 1025px) and (max-width: 1440px)
    font-size 14px

  &:before
    content ''
    position fixed
    top 0
    right 0
    bottom 0
    left 0
    background rgba(#282828, .7)

.Profile
  position relative
  text-align center

  &-title
  &-subtitle
    line-height 1
    text-transform uppercase

  &-title
    margin-bottom .1em
    font-size 6.5em
    font-weight 100

  &-subtitle
    position relative
    font-size 1.3em
    font-weight 300
    letter-spacing .4em

    &:after
      content ''
      position absolute
      left 15%
      bottom -.75em
      width 70%
      height 1px
      background #fff

  &-description
    margin-top 2em
    font-size 1.1em
    letter-spacing 1px

  &-social
    margin-top 2em

    &-item
      display inline-block
      margin 0 1em

      &-link
        color inherit
        font-size 1.2em

.Tooltip
  position relative

  &:before
    content attr(data-title)
    position absolute
    bottom -10px
    left 50%
    transform translate(-50%, 100%)
    padding .7em
    background-color rgba(#282828, .8)
    color rgba(#eee, .9)
    font-size .8em
    white-space nowrap
    letter-spacing 0
    opacity 0
    visibility hidden
    transition all .25s ease-in-out

  &:hover
    &:before
      opacity 1
      visibility visible

